# minigrid_mcp

./: MCP安装说明.md  README.md  minigrid_mcp_server.py  play_minigrid.py  pyproject.toml
游戏接口/: __init__.py  minigrid_mcp服务器.py  minigrid接口.py  共享会话.py
游戏本体/: play_minigrid.py
